# opsml-cli

./: .gitignore  .tool-versions  ATTRIBUTIONS.md  CONTRIBUTING.md  Cargo.toml  MAINTAINERS.md  README.md  makefile  pyproject.toml
.github/: CODEOWNERS  reviewer_config.yml
.github/ISSUE_TEMPLATE/: bug_report_python.yml  feature_request.yml
.github/workflows/: lint-testing.yml  release.yml
src/: main.rs
src/api/: cards.rs  cli.rs  commands.rs  metrics.rs  mod.rs  model.rs  route_helper.rs  types.rs  utils.rs
src/api/test_utils/: list_cards.json  list_files.json  list_metric.json  metadata.json
