[package]
name = "opsml-cli"
version = "0.5.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.3.21", features = ["derive"] }
futures = "0.3.29"
futures-util = "0.3.29"
lazy_static = "1.4.0"
owo-colors = "^4.0"
native-tls = { version = "0.2", features = ["vendored"] }
reqwest = { version = "^0", features = ["blocking", "json", "stream", "native-tls"], default-features = false }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tabled = { version = "^0", features = ["color"] }
tokio = { version = "1.34.0", features = [ "macros", "rt-multi-thread"] }

[dev-dependencies]
assert-json-diff = "2.0.2"
mockito = "1.0.2"
uuid = { version = "1.6.1", features = ["v4"] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
