[project]
name = "opsml-cli"
requires-python = ">=3.10"
version = "0.7.1"
description = "Rust-based CLI for interacting with OpsML"
readme = "README.md"
authors = [{ name = 'Steven Forrester', email = 'sjforrester32@gmail.com' }]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[dependency-groups]
dev = [
    "maturin >= 1.4.0, < 2.0.0",
    ]

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "bin"
strip = true


[project.urls]
"Homepage" = "https://github.com/demml/opsml-cli"
"Source Code" = "https://github.com/demml/opsml-cli"
"Issues" = "https://github.com/demml/opsml-cli/issues"
